@@ -14,6 +14,8 @@
             ComputeLoss()
           - BPRMF: add optional bold driver heuristic for learn rate adaptation
           - MatrixFactorization: use method from Eval namespace to compute fit
+          - UserItemBaseline: use several iterations of alternating
+            optimization instead of just one; implement IIterativeModel
 	- command-line tools
           - item prediction: rename --predict-for-users-file to
             --relevant-users for consistency with --relevant-items
